--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1>Hi this is my first project work</h1>
+   <p style="color:blue"> Hi this is my first project work </p>
 </div>
 
 </body>
