--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,7 @@
 <body>
 
 <div class="container-fluid">
+  <body style="background-color:blue">
   <h1>Hi this is my first project work</h1>
 </div>
 
